Fix layout issue with nested icons

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -82,6 +82,6 @@
   padding-top: 42px;
 }
 
-.ant-menu-item .anticon, .ant-menu-submenu-title .ant-input-search .anticon {
+.ant-menu-item .ant-input-search .anticon, .ant-menu-submenu-title .ant-input-search .anticon {
   margin-right: 0;
 }
